# NotificationTelegram

./: .env.example  .gitignore  Dockerfile  create_bot.py  docker-compose.yml  main.py  pyproject.toml
DAO/: postgres.py
KeyBoards/: start.py
handlers/client/: FSMMachines.py  __init__.py  handlers.py  register_client.py
handlers/webhook/: __init__.py  handlers.py  register_webhooks.py
middleware/: __init__.py  authentication.py  register_middleware.py
